--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>ห้องแชท</title>
+    <title>غرفة الدردشة</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/chat.css">
@@ -23,14 +23,14 @@
             <span id="name-txt">
                 ชื่อ
             </span>
-            <span class="mobile-drop-menu active" onclick="openFrame('chat-frame')">แชท</span>
-            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">ผู้ใช้งาน</span>
+            <span class="mobile-drop-menu active" onclick="openFrame('chat-frame')">دردشة</span>
+            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">المستعمل</span>
             <div class="dropdown right-item">
                 <button class="dropbtn" onclick="toggleDropMenu('main-drop-menu')" style="font-size: 16px">&equiv;
                 </button>
                 <div id="main-drop-menu" class="dropdown-content" style="font-weight: normal;">
-                    <span id="toggle-theme-btn">สลับธีม</span>
-                    <span onclick="exitRoom()" id="exit-room-btn">ออกห้อง</span>
+                    <span id="toggle-theme-btn">تبديل الموضوع</span>
+                    <span onclick="exitRoom()" id="exit-room-btn">غادر الغرفة</span>
                 </div>
             </div>
         </div>
@@ -44,14 +44,14 @@
                 <div class="chat-box">
                     <div id="chat-screen" class="chat-screen"></div>
                     <div class="chat-footer">
-                        <input id="msg-input" placeholder="ข้อความ">
-                        <button id="send-btn">ส่ง</button>
+                        <input id="msg-input" placeholder="رسالة">
+                        <button id="send-btn">إرسال</button>
                     </div>
                 </div>
             </div>
             <div class="option-screen" style="flex: 1">
                 <div class="member-list-frame">
-                    <div class="head-tag">ผู้ใช้งาน</div>
+                    <div class="head-tag">المستعمل</div>
                     <div id="member-list-box">
                     </div>
                 </div>
@@ -68,7 +68,7 @@
     <script>
         var SOCKET = io();
 
-        // authorization
+        // تفويض
         $(() => {
             SOCKET.emit('token', { token: sessionStorage.getItem("token") })
         });
