--- a/views/toggle.html
+++ b/views/toggle.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>แอปพลิเคชันเพื่อการเรียนรู้การเขียนโปรแกรม</title>
+    <title>تطبيق لتعلم البرمجة</title>
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="/jquery/jquery.min.js"></script>
