--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>หน้าเข้าสู่ระบบ</title>
+    <title>صفحة تسجيل الدخول</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/chat.css">
@@ -16,7 +16,7 @@
     height: 50%;flex-direction: column;
     align-items: center;
     justify-content: center;">
-        <div style="width: 80%;order: 0;text-align: center; font-size: 28px;">ลงชื่อเข้าใช้</div>
+        <div style="width: 80%;order: 0;text-align: center; font-size: 28px;">تسجيل الدخول</div>
         <input id="id-input" style="width: 80%;text-align: center;margin-top: 5px;padding: 10px; font-size: 18px;"
         type="text" placeholder="ใส่ชื่อที่นี่" autocomplete="off">
         <input style="width: 80%;margin-top: 5px;padding: 10px;font-size: 18px;" type="submit" value="ตกลง">
