--- a/views/send.html
+++ b/views/send.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>แอปพลิเคชันเพื่อการเรียนรู้การเขียนโปรแกรม</title>
+    <title>تطبيق لتعلم البرمجة</title>
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="/jquery/jquery.min.js"></script>
@@ -9,7 +9,7 @@
 
 <body>
     <div>
-        <button id="toggle-theme">Switch Theme</button>
+        <button id="toggle-theme">تبديل الموضوع</button>
         <span>This is "div" tag</div>
     </div>
 
