--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,8 @@
     justify-content: center;">
         <div style="width: 80%;order: 0;text-align: center; font-size: 28px;">تسجيل الدخول</div>
         <input id="id-input" style="width: 80%;text-align: center;margin-top: 5px;padding: 10px; font-size: 18px;"
-        type="text" placeholder="ใส่ชื่อที่นี่" autocomplete="off">
-        <input style="width: 80%;margin-top: 5px;padding: 10px;font-size: 18px;" type="submit" value="ตกลง">
+        type="text" placeholder="أدخل الاسم هنا" autocomplete="off">
+        <input style="width: 80%;margin-top: 5px;padding: 10px;font-size: 18px;" type="submit" value="انضم">
         <div id="wrong-txt" style="color: orangered"></div>
     </form>
 
