--- a/views/main.html
+++ b/views/main.html
@@ -16,7 +16,7 @@
     <div class="main-screen">
         <div class="head-bar">
             <span id="name-txt">
-                ชื่อ
+            اسم
             </span>
             <span class="mobile-drop-menu active" onclick="openFrame('chat-frame')">دردشة</span>
             <span class="mobile-drop-menu" onclick="openFrame('room-list-frame')">غرفة الدردشة</span>
@@ -39,20 +39,20 @@
                 <div class="chat-box">
                     <div id="chat-screen" class="chat-screen"></div>
                     <div class="chat-footer">
-                        <input id="msg-input" placeholder="ข้อความ">
+                        <input id="msg-input" placeholder="رسالة">
                         <button id="send-btn">إرسال</button>
                     </div>
                 </div>
             </div>
             <div class="option-screen">
                 <div class="room-list-frame">
-                    <div class="head-tag">مجال</div>
+                    <div class="head-tag">جميع الغرف</div>
                     <div id="room-list-box">
                     </div>
                     <button id="create-room-btn">إنشاء غرفة</button>
                 </div>
                 <div class="member-list-frame">
-                    <div class="head-tag">المستعمل</div>
+                    <div class="head-tag">المستخدمين</div>
                     <div id="member-list-box">
                     </div>
                     <button id="join-room-btn">انضم إلى الغرفة</button>
