--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
                 sessionStorage.setItem("token", data.token);
                 window.location.href = "./main";
             } else {
-                $('#wrong-txt').html('เกิดข้อผิดพลาด');
+                $('#wrong-txt').html('حدث خطأ');
                 $('#wrong-txt').show();
             }
         });
