--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -21,10 +21,10 @@
     <div class="main-screen">
         <div class="head-bar">
             <span id="name-txt">
-                ชื่อ
+                اسم
             </span>
             <span class="mobile-drop-menu active" onclick="openFrame('chat-frame')">دردشة</span>
-            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">المستعمل</span>
+            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">مستخدم</span>
             <div class="dropdown right-item">
                 <button class="dropbtn" onclick="toggleDropMenu('main-drop-menu')" style="font-size: 16px">&equiv;
                 </button>
@@ -51,7 +51,7 @@
             </div>
             <div class="option-screen" style="flex: 1">
                 <div class="member-list-frame">
-                    <div class="head-tag">المستعمل</div>
+                    <div class="head-tag">مستخدم</div>
                     <div id="member-list-box">
                     </div>
                 </div>
