--- a/views/main.html
+++ b/views/main.html
@@ -20,7 +20,7 @@
             </span>
             <span class="mobile-drop-menu active" onclick="openFrame('chat-frame')">دردشة</span>
             <span class="mobile-drop-menu" onclick="openFrame('room-list-frame')">غرفة الدردشة</span>
-            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">المستعمل</span>
+            <span class="mobile-drop-menu" onclick="openFrame('member-list-frame')">مستخدم</span>
             <div class="dropdown right-item">
                 <button class="dropbtn" onclick="toggleDropMenu('main-drop-menu')" style="font-size: 20px;padding:0 20px; background: none;">&equiv;
                 </button>
@@ -52,7 +52,7 @@
                     <button id="create-room-btn">إنشاء غرفة</button>
                 </div>
                 <div class="member-list-frame">
-                    <div class="head-tag">المستخدمين</div>
+                    <div class="head-tag">مستخدم</div>
                     <div id="member-list-box">
                     </div>
                     <button id="join-room-btn">انضم إلى الغرفة</button>
